加入ajax上传案例

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>webuploader文件上传</title>
     <script src="js/jquery.min.js"></script>
     <!-- webuploader文件上传 -->
     <script src="webuploader/webuploader.nolog.min.js"></script>
